# rotor-carbon

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.rst  index.html  search-index.js  vagga.yaml
examples/: feed_random_threaded.rs
implementors/rotor_stream/: trait.SocketError.js
implementors/slab/: trait.Index.js
netbuf/: constant.MAX_BUF_SIZE.html  enum.RangeArgument.html  index.html  struct.Buf.html
rotor/: enum.Compose2.html  enum.SpawnError.html  enum.Void.html  enum.WakeupError.html  index.html  macro.rotor_compose!.html  sidebar-items.js  struct.Config.html  struct.EarlyScope.html  struct.EventSet.html  struct.Loop.html  struct.LoopInstance.html  struct.Notifier.html  struct.PollOpt.html  struct.Response.html  struct.Scope.html  struct.Time.html  struct.Timeout.html  struct.TimerError.html  trait.Evented.html  trait.GenericScope.html  trait.Machine.html
rotor/mio/: enum.IpAddr.html  enum.NotifyError.html  index.html  struct.EventLoop.html  struct.EventLoopConfig.html  struct.EventSet.html  struct.Events.html  struct.Io.html  struct.IoEvent.html  struct.Ipv4Addr.html  struct.Ipv6Addr.html  struct.Poll.html  struct.PollOpt.html  struct.Selector.html  struct.Sender.html  struct.Timeout.html  struct.TimerError.html  struct.Token.html  trait.Evented.html  trait.Handler.html  trait.TryAccept.html  trait.TryRead.html  trait.TryWrite.html  type.TimerResult.html
rotor/void/: enum.Void.html  index.html  trait.ResultVoidErrExt.html  trait.ResultVoidExt.html
rotor_carbon/: fn.connect_ip.html  index.html  sidebar-items.js  struct.Sender.html  struct.Sink.html  type.Fsm.html
rotor_stream/: constant.MAX_BUF_SIZE.html  enum.Accept.html  enum.Exception.html  enum.Expectation.html  index.html  struct.Buf.html  struct.Intent.html  struct.IntentBuilder.html  struct.Persistent.html  struct.ProtocolStop.html  struct.Stream.html  struct.Transport.html  trait.Accepted.html  trait.ActiveStream.html  trait.Protocol.html  trait.SocketError.html  trait.StreamSocket.html
rotor_tools/: index.html
rotor_tools/compose/: enum.Spawn.html  index.html  trait.Spawner.html
rotor_tools/loop_ext/: index.html  trait.LoopExt.html  (+1 more)
src/: fsm.rs  lib.rs  proto.rs  sender.rs  sink.rs
(+144 files in other folders)
