[package]
name = "rotor-carbon"
description = """
    The carbon bindings for rotor
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["mio", "carbon", "graphite", "rotor", "metrics"]
homepage = "http://github.com/tailhook/rotor-carbon"
documentation = "http://tailhook.github.io/rotor-carbon"
version = "0.3.0"
authors = ["paul@colomiets.name"]

[dependencies]
rotor = "0.5.0"
quick-error = "0.2.1"
matches = "0.1"
ip = "1.0.0"
netbuf = "0.3.1"
void = "0.0.5"
time = "0.1.34"
rand = "0.3.13"
num = "0.1.30"

[dev-dependencies]
argparse = "0.2.1"
rand = "0.3.13"

[lib]
name = "rotor_carbon"
