[package]
name = "rotor-carbon"
description = """
    The carbon bindings for rotor
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["mio", "carbon", "graphite", "rotor", "metrics"]
homepage = "http://github.com/tailhook/rotor-carbon"
documentation = "http://tailhook.github.io/rotor-carbon"
version = "0.4.0"
authors = ["paul@colomiets.name"]

[dependencies]
rotor = {git="git://github.com/tailhook/rotor", rev="d001aa3"}
rotor-tools = {git="git://github.com/tailhook/rotor-tools", rev="f32fb8c"}
quick-error = "0.2.1"
matches = "0.1"
ip = "1.0.0"
netbuf = "0.3.1"
void = "0.0.5"
time = "0.1.34"
rand = "0.3.13"
num = "0.1.30"

[dependencies.rotor-stream]
git = "git://github.com/tailhook/rotor-stream"
rev = "416f803"
features = ["replaceable"]

[dev-dependencies]
argparse = "0.2.1"
rand = "0.3.13"

[lib]
name = "rotor_carbon"
